[package]
name = "nuklear-backend-vulkan"
version = "0.1.0"
authors = ["th0rex <c0untlizzi@gmail.com>"]
description = "A vulkan based drawing backend for the Nuklear 2D GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/th0rex/nuklear-backend-vulkan.git"

[dependencies]
nuklear-rust = "0.3"
quick-error = "1.2"
vulkano = "0.6"
vulkano-shader-derive = "0.6"

vulkano-win = { version = "0.6", optional = true}
winit = { version = "0.7", optional = true }

[features]
default = []
simple = ["vulkano-win", "winit"]
